--- a/package.json
+++ b/package.json
@@ -1,46 +1,23 @@
 {
   "name": "gas-monkey-project-backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"**/*.js\"",
-    "start": "babel-node index.js",
-    "start:dev": "nodemon",
-    "test": "jest",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.2.0"
+    "express": "^4.18.2",
+    "sequelize": "^6.35.0",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^11.0.1",
-    "@babel/core": "7.28.4",
-    "@babel/node": "7.28.0",
-    "@babel/plugin-proposal-decorators": "7.28.0",
-    "@babel/plugin-transform-runtime": "7.28.3",
-    "@babel/preset-env": "7.28.3",
-    "@babel/register": "7.28.3",
-    "@babel/runtime": "7.28.4",
-    "jest": "30.2.0",
-    "nodemon": "3.1.10",
-    "prettier": "3.6.2",
-    "supertest": "7.1.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.js$",
-    "coverageDirectory": "../coverage"
+    "nodemon": "^3.0.1"
   }
 }
