--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "sequelize": "^6.35.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.10",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "sequelize": "^6.35.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
