--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
+    "chalk": "^5.6.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "node-forge": "^1.3.1",
     "nodemailer": "^7.0.10",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.0"
+    "qrcode": "^1.5.4",
+    "sequelize": "^6.35.0",
+    "xmlbuilder2": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
